<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_title"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/action_signout"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_home"
        android:title="Home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_category"
        android:title="Category"
        app:showAsAction="never"/>

</menu>